--- a/manifest.json
+++ b/manifest.json
@@ -11,14 +11,18 @@
     "tabs",
     //这里需要配置下跨域请求的地址
     "http://ec2-54-235-237-146.compute-1.amazonaws.com:8010/sendcard/paypal_send_pull/",
-    "http://ec2-54-235-237-146.compute-1.amazonaws.com:8010/sendcard/paypal_order_notify/   "
-
+    "http://ec2-54-235-237-146.compute-1.amazonaws.com:8010/sendcard/paypal_order_notify/",
+    "storage"
   ],
 
   "content_scripts": [
     {
       "matches": [
-        "https://www.sandbox.paypal.com/c2/cgi-bin/*"
+        "https://www.sandbox.paypal.com/c2/cgi-bin/*",
+        "https://www.paypal.com/c2/cgi-bin/*",
+        "https://history.paypal.com/c2/cgi-bin/*",
+        "https://www.paypal.com/myaccount/home"
+
       ],
       "css":[
         "css/style.css"
